<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".activities.account.LoginActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.pajelingo.ui.LabeledEditText
                android:id="@+id/username_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/password_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:label="@string/username_label" />

            <com.example.pajelingo.ui.LabeledEditText
                android:id="@id/password_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/username_input"
                app:layout_constraintBottom_toTopOf="@id/login_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:label="@string/password_label"
                app:type="password"/>

            <com.example.pajelingo.ui.LoadingButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input"
                app:layout_constraintBottom_toTopOf="@id/reset_password_link_text_view"
                android:layout_marginTop="8dp"
                app:loadingButtonText="@string/login_button_text"/>

            <TextView
                android:id="@+id/reset_password_link_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_button"
                app:layout_constraintBottom_toTopOf="@id/or"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/raw_blue"
                android:text="@string/reset_password_link"/>

            <TextView
                android:id="@+id/or"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reset_password_link_text_view"
                app:layout_constraintBottom_toTopOf="@id/signup_link_text_view"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/or"/>

            <TextView
                android:id="@+id/signup_link_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/or"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/raw_blue"
                android:text="@string/signup_link"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>