<resources>
    <string name="app_name">Pajelingo</string>

    <string name="dialog_confirm_resources_sync_title">Resources synchronization</string>
    <string name="dialog_confirm_resources_sync_message"> You are going to download the resources. Please make sure to be online.
        If you have provided notification permission to the app, you can follow the progress on the notifications.
    </string>
    <string name="dialog_confirm_resources_sync_confirm">Launch</string>
    <string name="dialog_confirm_resources_sync_decline">Cancel</string>

    <string name="dialog_delete_account_title">Delete account</string>
    <string name="dialog_delete_account_message">Are you sure that you want to delete your account? This action is permanent and irreversible</string>
    <string name="dialog_delete_account_confirm">Yes, delete account</string>
    <string name="dialog_delete_account_decline">Decline</string>

    <string name="sync_notification_title">Resources synchronization</string>
    <string name="sync_toast_start">Synchronization started! Check the notifications to follow the progress.</string>
    <string name="sync_toast_failed">Synchronization failed. Try again and, if the error persists, contact us.</string>
    <string name="sync_toast_concluded">Synchronization concluded! Pajelingo is up to date now!</string>
    <string name="sync_notification_failed_title">Synchronization failed</string>
    <string name="sync_notification_failed_text">Try again and, if the error persists, contact us.</string>
    <string name="sync_notification_in_progress">Synchronization in progress…</string>
    <string name="sync_notification_concluded_title">Synchronization concluded</string>
    <string name="sync_notification_concluded_text">Pajelingo is up to date now!</string>

    <string name="badge_notification_title">New badge conquered: %1$s</string>
    <string name="badges_notification_title">New badges conquered</string>
    <string name="badges_notification_text">You conquered the following badges: %1$s</string>

    <string name="play_button_text">Play</string>
    <string name="check_button_text">Check</string>

    <string name="new_word_button_text">New word</string>
    <string name="target_language_label">Select the target language</string>
    <string name="base_language_label">Select the base language</string>
    <string name="instruction_vocabulary_game">Provide a translation in\u0020</string>
    <string name="warning_base_target_len_eq">Base language and target language must not be the same</string>

    <string name="article_game_hint_input_text">Article</string>
    <string name="warning_no_resources">There are not enough resources to launch this game. Please, launch a synchro and then try again.</string>
    <string name="correct_answer_message"><b>Correct :)</b>\n\n</string>
    <string name="wrong_answer_message"><b>Wrong answer</b>\n\n</string>
    <string name="app_name_splashscreen">Pajélingo</string>
    <string name="tab_icon_search_title">Search word</string>
    <string name="tab_icon_synchro_title">Get resources</string>
    <string name="search_button_text">Search</string>
    <string name="search_edit_text_hint">Search something</string>
    <string name="tab_icon_login_title">Login</string>
    <string name="tab_icon_logout_title">Logout</string>
    <string name="sp_file_name">MySharedPref</string>
    <string name="is_syncing_sp">is_syncing</string>
    <string name="username_sp">username</string>
    <string name="email_sp">email</string>
    <string name="token_sp">token</string>
    <string name="picture_sp">picture</string>
    <string name="bio_sp">bio</string>
    <string name="badges_sp">badges</string>
    <string name="is_first_access">is_first_access</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_button_text">Login</string>
    <string name="choose_language_label">Select a language</string>
    <string name="greeting_text">Welcome back, %1$s</string>
    <string name="tab_icon_rankings_title">Rankings</string>
    <string name="tab_icon_menu_title">Menu</string>
    <string name="all_languages_spinner_option">All languages</string>
    <string name="login_dialog_title">Please, wait</string>
    <string name="login_dialog_message">Verifying credentials…</string>
    <string name="warning_invalid_credentials">Invalid username or password</string>
    <string name="warning_connection_error">Connexion error, please verify your internet connection</string>
    <string name="warning_request_error">An error happened processing your request, please verify your internet connexion and try again</string>
    <string name="update_ranking_success_message">Rankings updated</string>
    <string name="no_resources_message">It seems that game data is missing… Do a sync (loop button on the top of the screen)
        to have access to our games.</string>
    <string name="confirm_update_rankings_dialog_title">Rankings update</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="default_last_synchro_date">not found</string>
    <string name="dictionary_activity_title">Dictionary</string>
    <string name="favorite_words_activity_title">Favorite words</string>
    <string name="ranking_activity_title">Rankings</string>
    <string name="login_activity_title">Login</string>
    <string name="loading_message">We are loading your results, please wait…</string>
    <string name="no_results_message">No result matching your search was found</string>
    <string name="profile_menu_item_title">Profile</string>
    <string name="search_account_menu_item_title">Search account</string>
    <string name="rankings_menu_item_title">Rankings</string>
    <string name="faq_menu_item_title">FAQ</string>
    <string name="faq_1_title">Who is the creator of this app?</string>
    <string name="faq_1_description">My name is Humberto Borges. I\'m a web and mobile developer interested in learn more about
        the development world. I also love learning foreign languages and online platforms had a great role on my learning.
        Hence I came up with the idea of developing an app by myself to contribute as developer and as a learner. Find me on
        GitHub and on LinkedIn:
        \n\n
        www.linkedin.com/in/humberto-bpf
        https://github.com/HumbertoBPF</string>
    <string name="faq_2_title">What is this app for?</string>
    <string name="faq_2_description">This app aims to help you to improve your skills in foreign languages.
        \n\n
        An important part of leaning a new language is about practicing it everyday, so you\'ll find here games where you can practice key
        aspects of your target language, such as vocabulary and verb conjugation. The games are simple such that you can play it while
        taking a bus or waiting on a line. You don\'t need to have an account to play the games, but you can compete with other players
        in our rankings by signing up.
        \n\n
        This app also has a search tool that you can use to get more vocabulary. We provide the meanings of the words in their language
        instead of translations to keep your immersion in your target language.
    </string>
    <string name="faq_3_title">Can I use this app offline?</string>
    <string name="faq_3_description">Most features of this app work offline if you performed a sync successfully at least once. That\'s the case
        for the games and the search tool. Account related functionalities, for example login and performing account information updates require
        an internet connexion.
        \n\n
        Sync are necessary to keep app resources, like rankings and game data, updated. Because we try to improve this app and your experience with
        it constantly, we recommend that you perform syncs regularly (at least weekly). Since app data is downloaded from our server, you need to be
        online to perform a sync successfully.</string>
    <string name="faq_4_title">How much does it cost?</string>
    <string name="faq_4_description">It\'s free :)</string>
    <string name="faq_activity_title">FAQ</string>
    <string name="fab_next_text">Next</string>
    <string name="fab_back_text">Back</string>
    <string name="on_boarding_1">Welcome to Pajelingo! We are here to help you to learn foreign languages :)</string>
    <string name="on_boarding_2">We have several games and a powerful search tool for you, without registration! However, your experience is even better with an account :)</string>
    <string name="on_boarding_3">Happy learning!</string>
    <string name="button_get_started_text">Get started</string>
    <string name="signup_link"><u>Don\'t have an account? Sign up</u></string>
    <string name="update_account_activity_title">Update account</string>
    <string name="signup_activity_title">Sign up</string>
    <string name="login_link"><u>Already has an account? Login</u></string>
    <string name="signup_button_text">Create account</string>
    <string name="update_account_button_text">Update account</string>
    <string name="email_label">Email</string>
    <string name="password_requirements_label">Your password must have:</string>
    <string name="password_requirement_1">1 digit</string>
    <string name="password_requirement_2">1 letter</string>
    <string name="password_requirement_3">1 special character</string>
    <string name="password_requirement_4">Between 8 and 30 characters</string>
    <string name="profile_activity_title">Profile</string>
    <string name="update_account">Update credentials</string>
    <string name="delete_account">Delete account</string>
    <string name="favorite_button_description">Favorite words</string>
    <string name="warning_form_validation">Form validation error. Please, verify the values specified in the form.</string>
    <string name="warning_password_requirements">The password must fulfill all the listed requirements</string>
    <string name="successful_signup_message">Account created successfully</string>
    <string name="confirm_deletion_text">Confirm that you want to delete your account by typing <b>\"permanently delete\"</b> in the input below:</string>
    <string name="confirm_deletion_activity_title">Confirm deletion</string>
    <string name="confirm_deletion_string">permanently delete</string>
    <string name="warning_confirm_deletion">The text that you typed does not match <b>\"permanently delete\"</b></string>
    <string name="account_deletion_success">Account successfully deleted</string>
    <string name="password_confirmation_label">Repeat the password</string>
    <string name="successful_update_message">Account successfully updated</string>
    <string name="warning_password_confirmation">The passwords are not equal</string>
    <string name="or">or</string>
    <string name="reset_password_link"><u>I forgot my password</u></string>
    <string name="reset_button_text">Reset password</string>
    <string name="reset_password_instructions">Inform the email associated with your account</string>
    <string name="reset_password_loading_dialog_title">Please wait</string>
    <string name="reset_password_loading_dialog_message">Requesting password reset…</string>
    <string name="reset_password_feedback_dialog_title">Check your email</string>
    <string name="reset_password_feedback_dialog_message">Check the specified email to reset your account. If there is an email associated with a
        Pajelingo account you should have received an email with a reset link.</string>
    <string name="reset_password_error_dialog_title">Error</string>
    <string name="reset_password_positive_button_text">OK</string>
    <string name="warning_email_required">Email is required</string>
    <string name="warning_email_format_required">Input needs to be an email</string>
    <string name="update_account_dialog_message">Updating your account…</string>
    <string name="creating_account_dialog_message">Creating account…</string>
    <string name="badges_header_text">Badges:</string>
    <string name="score_header_text">Performance in our games:</string>
    <string name="remove_from_favorite_words">Remove from favorites</string>
    <string name="add_to_favorite_words">Add to favorites</string>
    <string name="error_removing_word_from_favorites">Error when trying to remove word from favorites.</string>
    <string name="error_adding_word_to_favorites">Error when trying to add word to favorites.</string>
    <string name="search_with_filters">Filter</string>
    <string name="error_game_score">Something went wrong</string>
    <string name="current_game_score">Your current score is %1$d</string>
    <string name="loading_game_text">Please wait\n(Log out to get rid of loadings,\nbut keep in mind that you will not receive a score when logged out)</string>
    <string name="verb_and_tense_text">%1$s - %2$s</string>
    <string name="notification_channel_name">Notification channel name</string>
    <string name="notification_channel_description">Notification channel description</string>
    <string name="loading_button_text">Please wait</string>
    <string name="no_data_content_description">No data</string>
    <string name="meaning_image_content_description">Meaning image</string>
    <string name="on_boarding_image_content_description">On boarding image</string>
    <string name="profile_picture_content_description">Profile picture</string>
    <string name="your_email_hint">Your email</string>
    <string name="logo_content_description">Logo</string>
    <string name="loading_content_description">Loading</string>
    <string name="default_label_text">Default label</string>
    <string name="fulfilled_requirement_content_description">Fulfilled</string>
    <string name="hint_edit_text_account_search">Search an account</string>
    <string name="search_account_button">Search account</string>
    <string name="account_picture_content_description">Account picture</string>
    <string name="account_username">Username: %1$s</string>
    <string name="account_email">Email: %1$s</string>
    <string name="account_bio">Bio: %1$s</string>
    <string name="game_image_view_content_description">Game</string>
    <string name="language_image_view_content_description">Language flag</string>
    <string name="icon_heart_content_description">Icon heart</string>
    <string name="bio_label">Bio</string>

    <string name="warning_outdated_data">A data update attempt failed, so this page may be outdated.</string>
    <string name="badge_details_confirm_button_text">OK</string>
</resources>