<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_synchro"
        android:icon="@drawable/ic_synchro"
        android:title="@string/tab_icon_synchro_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_login_logout"
        android:icon="@drawable/ic_login"
        android:title="@string/tab_icon_login_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/tab_icon_menu_title"
        app:showAsAction="ifRoom"/>

</menu>