...
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:backgroundTint="@color/white"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/greeting_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"/>
...
